--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,9 @@
-certifi==2019.6.16
-chardet==3.0.4
-Click==7.0
-dash==1.1.1
-dash-core-components==1.1.1
-dash-html-components==1.0.0
-dash-renderer==1.0.0
-dash-table==4.1.0
-dask==2.1.0
-decorator==4.4.0
-Flask==1.1.1
-Flask-Compress==1.4.0
-gunicorn==19.9.0
-html5lib==1.0.1
-idna==2.8
-ipython-genutils==0.2.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
-jupyter-core==4.5.0
-MarkupSafe==1.1.1
-nbformat==4.4.0
-numpy==1.16.4
-pandas==0.24.2
-plotly==4.1.0
-pytz==2019.1
-six==1.12.0
-traitlets==4.3.2
-Werkzeug==0.15.4
+dash==2.6.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==2.2.2
+numpy==1.23.4
+pandas==1.5.0
+plotly==5.10.0
+python-dateutil==2.8.2
